<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/food_name"
            android:hint="@string/name"
            app:met_clearButton="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:textColor="@color/overlayBackground"
            android:inputType="textCapCharacters"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/colorPrimary"
            app:met_primaryColor="#fff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <info.hoang8f.widget.FButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnSelect"
                android:text="@string/select"
                android:textColor="@android:color/white"
                app:fButtonColor="#09091A"
                app:shadowEnabled="true"
                app:shadowHeight="2dp"
                app:cornerRadius="20dp"
                android:layout_margin="6dp"
                tools:ignore="ButtonStyle"/>

            <info.hoang8f.widget.FButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btnUpload"
                android:text="@string/upload"
                android:textColor="@android:color/white"
                app:fButtonColor="#09091A"
                app:shadowEnabled="true"
                app:shadowHeight="2dp"
                app:cornerRadius="20dp"
                android:layout_margin="6dp"
                tools:ignore="ButtonStyle" />


        </LinearLayout>


</LinearLayout>

</androidx.cardview.widget.CardView>