<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo_plate1"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/textSlogan"
                android:text="@string/slogan"
                android:textColor="#010717"
                android:textStyle="bold"
                android:textSize="24sp" />


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="#fff"
            android:indeterminateTintMode="src_atop" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnClient"
            android:text="@string/client"
            android:textColor="@android:color/white"
            app:fButtonColor="#09091A"
            app:shadowEnabled="true"
            app:shadowHeight="2dp"
            app:cornerRadius="20dp"
            android:layout_margin="6dp"
            tools:ignore="ButtonStyle" />

        <info.hoang8f.widget.FButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnServer"
            android:text="@string/server"
            android:textColor="@android:color/white"
            app:fButtonColor="#09091A"
            app:shadowEnabled="true"
            app:shadowHeight="2dp"
            app:cornerRadius="20dp"
            android:layout_margin="6dp"
            tools:ignore="ButtonStyle" />



    </LinearLayout>

</RelativeLayout>

