<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".SignIn">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UselessLeaf,UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="148dp"
                    android:layout_height="134dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="Already \nhave an \nAccount?" />

                <ImageView
                    android:layout_width="201dp"
                    android:layout_height="182dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="0dp"
                    android:src="@drawable/plate" />
            </RelativeLayout>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editPhone"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fff"
                android:textColor="@android:color/black"
                android:inputType="phone"
                android:text="@string/_1234567890"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="11"
                app:met_minCharacters="10"
                app:met_primaryColor="#fff"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/editPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fff"
                android:textColor="@android:color/black"
                android:text="@string/_12345678"
                android:inputType="textPassword"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_minCharacters="8"
                app:met_primaryColor="#fff"/>

            <com.rey.material.widget.CheckBox
                android:id="@+id/remember_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"/>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="Forgot Password?"
                android:textColor="@android:color/black"
                android:textSize="@dimen/newsMoreTextSize" />

            <info.hoang8f.widget.FButton
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:id="@+id/btnSignIn"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="Sign In"
                android:textColor="@android:color/white"
                app:fButtonColor="#FFAB00"
                app:shadowEnabled="true"
                app:shadowHeight="2dp"
                app:cornerRadius="20dp"
                android:layout_margin="6dp"
                tools:ignore="ButtonStyle"/>

            <TextView
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:id="@+id/newUserLink"
                android:text="New user? Register Now"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:weightSum="12">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="Use other Methods"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimaryDark" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_google_plus" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
